# lambda-deploy

./: .gitignore  Dockerfile  Jenkinsfile.launcher  Jenkinsfile.watcher  config.py  docker-compose.yml  job.py  params.py  pyproject.toml
dev/: seed.sh
infra/: task-role.tf
tests/: conftest.py  test_config.py  test_integration.py  test_job.py  test_params.py
