[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lambda-deploy"
version = "1.0.0"
description = "Lambda deployment job for the Detent framework."
requires-python = ">=3.10"
dependencies = [
    "detent>=0.1.0",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "moto[lambda,iam]>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "flake8>=7.0",
]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires LocalStack running",
]
